# ML-UFRGS-2025-1

./: LICENSE  README.md  pyproject.toml  resultados_treinos.txt
results/: balance_none.txt  best_models.txt  prepocessing.txt  resultados_modelos.txt
src/: data_processing.py  main.py  main_etapa1.py  main_etapa2.py  preprocessing.py  processing.py
src/models/: bayesian_ridge.py  decision_tree.py  elastic_net.py  final_model.py  gradient_boosting.py  histogram_gb.py  hyperopt.py  knn.py  linear_regression.py  mlp.py  models.py  random_forest.py  svr.py
