[tool.poetry]
name = "ml-ufrgs-2025-1"
version = "0.1.0"
description = ""
authors = ["LimaXII <luccasdasilvalima@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.2.5"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
